deployments/openshift/03_api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: cluster-iq
    component: api
spec:
  selector:
    matchLabels:
      app: cluster-iq
      component: api
  replicas: 1
  template:
    metadata:
      labels:
        app: cluster-iq
        component: api
    spec:
      containers:
        - name: api
          image: quay.io/ecosystem-appeng/cluster-iq-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: api
              containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: cluster-iq
    component: api
spec:
  selector:
    app: cluster-iq
    component: api
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: api
