deployments/openshift/pgsql.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsql
  labels:
    app: cluster-iq
    component: db
spec:
  selector:
    matchLabels:
      app: cluster-iq
      component: db
  replicas: 1
  template:
    metadata:
      labels:
        app: cluster-iq
        component: db
    spec:
      containers:
        - name: pgsql
          image: registry.redhat.io/rhel8/postgresql-12@sha256:a6230cba71eb33e67fffc21161929de4bc618bc5e2f21fbec3c4c227205c2061
          readinessProbe:
            exec:
              command:
              - echo
              - "Ready"
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: cluster-iq-data
              mountPath: /var/lib/pgsql/data

  volumeClaimTemplates:
    - metadata:
        name: cluster-iq-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi



---
apiVersion: v1
kind: Service
metadata:
  name: pgsql
spec:
  type: ClusterIP
  selector:
    app: cluster-iq
    component: db
  ports:
    - name: pgsql
      protocol: TCP
      port: 5432
      targetPort: 5432
