deployments/openshift/05_console.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  labels:
    app: cluster-iq
    component: console
spec:
  selector:
    matchLabels:
      app: cluster-iq
      component: console
  replicas: 1
  template:
    metadata:
      labels:
        app: cluster-iq
        component: console
    spec:
      serviceAccountName: cluster-iq
      containers:
        - name: console
          image: quay.io/ecosystem-appeng/cluster-iq-console:v0.2
          imagePullPolicy: Always
          ports:
            - name: console
              containerPort: 3000
        - name: oauth-proxy
          image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.13
          imagePullPolicy: IfNotPresent
          args:
             - -provider=openshift
             - -https-address=:8443
             - -http-address=
             - -email-domain=*
             - -tls-cert=/etc/tls/private/tls.crt
             - -tls-key=/etc/tls/private/tls.key
             - -upstream=http://localhost:3000
             - -cookie-secret=ClusterIQ-Cookie
             - -openshift-service-account=cluster-iq
             - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
          ports:
            - name: oauth-proxy
              containerPort: 8443
          volumeMounts:
            - mountPath: /etc/tls/private
              name: console-tls
      volumes:
        - name: console-tls
          secret:
            defaultMode: 420
            secretName: console-tls



---
apiVersion: v1
kind: Service
metadata:
  name: console
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: console-tls
  labels:
    app: cluster-iq
    component: console
spec:
  selector:
    app: cluster-iq
    component: console
  ports:
    - name: console
      protocol: TCP
      port: 3000
      targetPort: console
    - name: oauth-proxy
      protocol: TCP
      port: 8443
      targetPort: oauth-proxy


---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
  labels:
    app: cluster-iq
    component: console
spec:
  to:
    kind: Service
    name: console
    weight: 100
  port:
    targetPort: oauth-proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
