deployments/openshift/console.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  labels:
    app: cluster-iq
    component: console
spec:
  selector:
    matchLabels:
      app: cluster-iq
      component: console
  replicas: 1
  template:
    metadata:
      labels:
        app: cluster-iq
        component: console
    spec:
      containers:
        - name: server
          image: quay.io/ecosystem-appeng/cluster-iq-console:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: console
  labels:
    app: cluster-iq
    component: console
spec:
  selector:
    app: cluster-iq
    component: console
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: console

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
  labels:
    app: cluster-iq
    component: console
spec:
  to:
    kind: Service
    name: console
    weight: 100
  port:
    targetPort: console
  tls:
    termination: edge
